--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
     "axios": "^1.1.2",
+    "date-fns": "^2.29.3",
+    "ethers": "^5.7.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
