Fix filters, need to improve performance

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.7.1",
     "fluffy-waddle-database": "^0.1.5",
     "next": "12.3.1",
+    "next-usequerystate": "^1.7.2",
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
