--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg": "^8.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
